--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "jquery-ujs": "^1.2.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -25,7 +26,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --mode=development --watch"
+    "start": "webpack --mode=development --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -37,5 +39,9 @@
   "bugs": {
     "url": "https://github.com/trevor-shepard/my_chart/issues"
   },
-  "homepage": "https://github.com/trevor-shepard/my_chart#readme"
+  "homepage": "https://github.com/trevor-shepard/my_chart#readme",
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  }
 }
