Add suit column to clinics table

--- a/test/fixtures/clinics.yml
+++ b/test/fixtures/clinics.yml
@@ -12,6 +12,7 @@
 #  fax        :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  suite      :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
