--- a/test/fixtures/clinics.yml
+++ b/test/fixtures/clinics.yml
@@ -13,6 +13,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  suite      :string
+#  city       :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
