--- a/test/fixtures/prescriptions.yml
+++ b/test/fixtures/prescriptions.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: prescriptions
+#
+#  id            :bigint(8)        not null, primary key
+#  medication_id :integer          not null
+#  provider_id   :integer          not null
+#  user_id       :integer          not null
+#  count         :integer          not null
+#  refills       :integer          not null
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
